      when `enable_auto_font_offset` is disabled.
    - Fixed wrong vertical alignment on Friction Circle & Gear Widget.

* Core
    - Add "Global Font Override" option to "Config menu" on main window,
      which provides options to change font setting globally for all widgets.
      Options explain:
      [Font Name]
      Select a font name to replace "font_name" setting of all widgets.
      [Font Size Addend]
      Set an addend number that will be added (or subtracted if negative)
      to "font_size" value of all widgets. "0" means no change to font size.
      [Font Weight]
      Set font weight to replace "font_weight" setting of all widgets.
      "unchanged" means no change to font weight.
    - Add "compatibility" option to "Config menu" on main window for easy access.
    - Moved "show_at_startup", "minimize_to_tray", "remember_position" options
      to "Window menu" on main window.
    - Removed "thick black border" from all widgets that could be visible
      when running on certain window manager, or using certain window capture APPs.

2.1.1 (2023-05-24)
-----------------------------
* Flag Widget
    - Removed countdown timer feature.

* Core
    - Add new "compatibility" section in json file for solving platform specific problem.
    - Add "enable_bypass_window_manager" option in "compatibility"
      section for linux platform (thanks to help from srlemke & Bernat).

* Misc
    - Updated customization guide.

2.1.0 (2023-05-22)
-----------------------------
* [New]Friction Circle Widget
    - Show longitudinal & lateral g force as friction circle with 2 orientation layouts.
    - Show longitudinal & lateral g force readings.
    - Show max longitudinal & lateral g force readings.
    - Show reference circle from max average lateral g force reading.
    - Show g force trace plot with customizable sample size, and line or points style.
    - Show center mark and up to 5 customizable reference circles.

* Radar Widget